Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.17.1
Description
If an Array is created with null_count == -1 but without any null (and thus no null bitmap buffer), then ArrayData.null_count will remain -1 when exporting if null_count is never computed. The exported C struct also has null_count == -1 [1]. But when importing, if null_count != 0, an error [2] will be raised.
Attachments
Issue Links
- links to