ARROW-9037: [C++] C-ABI: do not error out when importing array with null_count == -1

Also when exporting an array, force compute the null count. This way future version will be able to import an array exported by 0.17, and vice versa.

Closes #7353 from brills/c_api_fix

Authored-by: Zhuo Peng <1835738+brills@users.noreply.github.com>
Signed-off-by: François Saint-Jacques <fsaintjacques@gmail.com>